discussion/kv_engine/130856/130856_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

dump of magma underflow test stuff

Change-Id: I26e54f93eeab136ee916f05c939a476b1fd44b97

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-06-18 09:01:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-18 09:17:05.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1339/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/vbucket_state.h b/engines/ep/src/vbucket_state.h
index 743f9a9..d5ccda7 100644
--- a/engines/ep/src/vbucket_state.h
+++ b/engines/ep/src/vbucket_state.h
@@ -184,7 +184,8 @@ struct vbucket_state {
      * vBucket level on disk document counts (for Full Eviction). Added for
      * SyncReplication in 6.5.
      */
-    //cb::NonNegativeCounter&lt;uint64_t, cb::SigintUnderflowPolicy&gt; onDiskPrepares = 0;
+    // cb::NonNegativeCounter&lt;uint64_t, cb::SigintUnderflowPolicy&gt;
+    // onDiskPrepares = 0;
     uint64_t onDiskPrepares = 0;
 
     /**
diff --git a/engines/ep/tests/module_tests/collections/evp_store_collections_eraser_test.cc b/engines/ep/tests/module_tests/collections/evp_store_collections_eraser_test.cc
index 6b7ccbf..3cef7ed 100644
--- a/engines/ep/tests/module_tests/collections/evp_store_collections_eraser_test.cc
+++ b/engines/ep/tests/module_tests/collections/evp_store_collections_eraser_test.cc
@@ -647,7 +647,6 @@ TEST_P(CollectionsEraserTest, CompactionVisitsPreparesOnce) {
     vb-&gt;updateFromManifest({cm});
     flushVBucketToDiskIfPersistent(vbid, 1);
 
-
     // add some items
     store_item(vbid, StoredDocKey{&quot;milk&quot;, CollectionEntry::dairy}, &quot;nice&quot;);
     flushVBucketToDiskIfPersistent(vbid, 1 /* 1x items */);

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1339/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24659/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18:
error: no type named "raise" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24659/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28631/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1148): error C2039: "raise": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28631/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2835/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18: error: no type named "raise" in namespace "std" [clang-diagnostic-error]
            std::raise(SIGINT);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1514:14: error: no type named "raise" in namespace "std" [clang-diagnostic-error]
        std::raise(SIGINT);
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1797:18: error: no type named "raise" in namespace "std" [clang-diagnostic-error]
            std::raise(SIGINT);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1826:22: error: no type named "raise" in namespace "std" [clang-diagnostic-error]
                std::raise(SIGINT);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1870:18: error: no type named "raise" in namespace "std" [clang-diagnostic-error]
            std::raise(SIGINT);
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2835/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18:
error: no type named "raise" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2835/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4195/ : FAILURE

Failure of GoogleTest "CollectionsEraserTests/CollectionsEraserTest.CompactionVisitsPreparesOnce/persistent_value_only":

<pre>
[ RUN      ] CollectionsEraserTests/CollectionsEraserTest.CompactionVisitsPreparesOnce/persistent_value_only
[2020-06-18T09:13:04.491Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_eraser_test.cc:694: Failure
[2020-06-18T09:13:04.491Z] Expected equality of these values:
[2020-06-18T09:13:04.491Z]   0
[2020-06-18T09:13:04.491Z]   state->onDiskPrepares
[2020-06-18T09:13:04.491Z]     Which is: 1
[2020-06-18T09:13:04.491Z] [  FAILED  ] CollectionsEraserTests/CollectionsEraserTest.CompactionVisitsPreparesOnce/persistent_value_only, where GetParam() = ("persistent", "value_only") (19 ms)
CollectionsEraserTests/CollectionsEraserTest.CompactionVisitsPreparesOnce/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4195/ )

Failure of a CTest test [2020-06-18T09:13:04.490Z] 114/398 Test #139: ep-engine_ep_unit_tests.CollectionsEraserTests/CollectionsEraserTest .............................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4195/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4333/ : FAILURE

Compile error at [2020-06-18T09:12:33.455Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18:
error: ?raise? is not a member of ?std?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4333/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12076/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3307/ : FAILURE

Compile error at [2020-06-18T09:09:00.979Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18:
error: no member named "raise" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3307/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4250/ : FAILURE

Compile error at [2020-06-18T09:10:55.295Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1148:18:
error: ?raise? is not a member of ?std?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4250/ )
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-06-29 09:35:04.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
